[tool.poetry]
name = "llmwrappers"
version = "0.1.0"
description = ""
authors = [
    "Kunal Patel <kunal.patel@cerebras.net>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
cerebras_cloud_sdk = "1.21.0"
openai = "^1.63.2"
fastapi-poe = "^0.0.62"
anthropic = "^0.54.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
