[tool.poetry]
name = "llmwrappers"
version = "0.1.0"
description = ""
authors = [
    "Kunal Patel <kunal.patel@cerebras.net>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cerebras_cloud_sdk = "*"
openai = "*"
fastapi-poe = "*"
anthropic = "*"
mcp = "*"
fireworks-ai = "*"


[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
